[package]
name = "integer"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["signed", "integereger", "trait"]
description = "signed integereger trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-integer.git"
homepage = "https://github.com/nathanfaucett/rs-integer"

[dependencies]
abs = {git = "https://github.com/nathanfaucett/rs-abs.git"}
num = {git = "https://github.com/nathanfaucett/rs-num.git"}
